--- a/AffichageErreur/app/src/main/res/values/strings.xml
+++ b/AffichageErreur/app/src/main/res/values/strings.xml
@@ -1,10 +1,11 @@
 <resources>
-    <string name="app_name">Erreurs</string>
-    <string name="error_example">le message doit clairement indiquer comment résoudre la situation</string>
-    <string name="snack_message">Le snack bar mieux que Toast?</string>
-    <string name="error_password">Erreur ou indice ancienne façon</string>
-    <string name="no_network">Pas de réseau</string>
+    <string name="app_name">Errors</string>
+    <string name="error_example">The message must give a clear path to a solution</string>
+    <string name="snack_message">Is a snackbar better than a toast ?</string>
+    <string name="error_password">Error, old school</string>
+    <string name="no_network">No network</string>
     <string name="ok">Ok</string>
     <string name="retry">Retry</string>
-    <string name="go_there">Voir</string>
+    <string name="go_there">go see</string>
+    <string name="enter_firstname">Enter your first name</string>
 </resources>
